--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </div>
 <div class="bottomContainer">
     <div class="leftContainer">
-        <input class="guess" type="number" name="" id="">
+        <label for="guess">Add Your Number</label>
+        <input class="guess" type="number" name="" id="guess">
         <button class="check">Check</button>
     </div>
     <div class="rightContainer">
